avoid overlapping in playing_next

--- a/src/app/styl/views/player.styl
+++ b/src/app/styl/views/player.styl
@@ -111,7 +111,7 @@
         color: #fff
         z-index: 23
         bottom: 10vh !important
-        width: 400px;
+        width: 450px;
         height: 140px;
         padding: 10px
         font-size: 20px
@@ -130,7 +130,7 @@
             }
         }
         .pn_epinfo {
-            width: 200px;
+            width: 235px;
             height: 80px;
             float: left;
             text-align: left;
@@ -139,18 +139,27 @@
                 font-size: 15px;
                 font-weight: bold;
                 line-height: 20px;
+                overflow: hidden; 
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
             .playing_next_episode {
                 font-size: 11px;
                 line-height: 14px;
+                overflow: hidden; 
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
             .playing_next_number {
                 font-size: 17px;
                 margin-top: 18px;
+                overflow: hidden; 
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
         }
         .pn_counter {
-            width: 90px;
+            width: 105px;
             height: 80px;
             float: left;
 
@@ -168,7 +177,7 @@
             }
         }
         .pn_btns {
-            width: 290px;
+            width: 340px;
             height: 40px;
             float: left;
 
